added elements to index.html in pokemon app

--- a/index.html
+++ b/index.html
@@ -14,15 +14,33 @@
 
 <body>
     <header>
-       
+        <h1></h1>
     </header>
     <main>
+        <div class='pokemon-options'>
+
+            <!-- option 1 -->
+            <label class='pokemon'>
+                <input id="pokemon1-radio" name="pokemon" type="radio">
+                <img id='pokemon1-image'>
+            </label>
+
+            <!-- option 2 -->
+            <label class='pokemon'>
+                <input id="pokemon2-radio" name="pokemon" type="radio">
+                <img id='pokemon2-image'>
+            </label>
+
+            <!-- option 3 -->
+            <label class='pokemon'>
+                <input id="pokemon3-radio" name="pokemon" type="radio">
+                <img id='pokemon3-image'>
+            </label>
+        </div>
+        <button id="choice">I Choose You!</button>
        
     </main>
-    <footer>
-        <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
-    </footer>
-
+   
     <script type="module" src="./app.js"></script>
 </body>
 
