add rendering pokemon

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
             <!-- option 1 -->
             <label class='pokemon'>
                 <input id="pokemon1-radio" name="pokemon" type="radio">
-                <img id='pokemon1-image'>
+                <img id='pokemon1-image' src="">
             </label>
 
             <!-- option 2 -->
             <label class='pokemon'>
                 <input id="pokemon2-radio" name="pokemon" type="radio">
-                <img id='pokemon2-image'>
+                <img id='pokemon2-image' src="">
             </label>
 
             <!-- option 3 -->
             <label class='pokemon'>
                 <input id="pokemon3-radio" name="pokemon" type="radio">
-                <img id='pokemon3-image'>
+                <img id='pokemon3-image' src="">
             </label>
         </div>
         <button id="choice">I Choose You!</button>
