created renderresults.js created html elements and classlists in results added basic css to data Li/img

--- a/results/results.html
+++ b/results/results.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <h1>Results!</h1>
-    <ul>
-        <li></li>
-        <li>encounter: 0</li>
-        <li>captured: 0</li>
+
+    <ul id="dataUl">
     </ul>
+    
 <a href='../index.html'>Go Back</a>
 </body>
 <script type="module" src="./results.js"></script>
