--- a/results/results.html
+++ b/results/results.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./results.css">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js"></script>
 </head>
 <body>
     <h1>Results!</h1>
 
     <ul id="dataUl">
     </ul>
+    <canvas id="myChart" width="300" height="300"></canvas>
     
 <a href='../index.html'>Go Back</a>
 </body>
 <script type="module" src="./results.js"></script>
+<script type="module" src="./chart.js"></script>
 </html>
