disable button for no selection, touch up styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         </div>
       
-        <div id="hidden"></div>
+        <div id="rounds"></div>
     </main>
     
     <script type="module" src="./app.js"></script>
