--- a/results/results.html
+++ b/results/results.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./results.css">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js"></script> -->
 </head>
 <body>
-    <h1>Results!</h1>
+    <h1>Here's your results!</h1>
+    <a href='../index.html' id="play-again">Play again?!</a>
 
     <ul id="dataUl">
     </ul>
-    <canvas id="myChart" width="300" height="300"></canvas>
+    <!-- <canvas id="myChart" width="300" height="300"></canvas> -->
     
-<a href='../index.html'>Go Back</a>
 </body>
 <script type="module" src="./results.js"></script>
-<script type="module" src="./chart.js"></script>
+<!-- <script type="module" src="./chart.js"></script> -->
 </html>
