--- a/results/results.html
+++ b/results/results.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./results.css">
     <title>Document</title>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js"></script>
 </head>
 <body>
     <h1>Here's your results!</h1>
@@ -14,9 +14,9 @@
 
     <ul id="dataUl">
     </ul>
-    <!-- <canvas id="myChart" width="300" height="300"></canvas> -->
+    <canvas id="myChart" width="300" height="300"></canvas>
     
 </body>
 <script type="module" src="./results.js"></script>
-<!-- <script type="module" src="./chart.js"></script> -->
+<script type="module" src="./chart.js"></script>
 </html>
