added changes to chart api.js and added audio files to audio folder

--- a/results/results.html
+++ b/results/results.html
@@ -15,8 +15,8 @@
     <ul id="dataUl">
     </ul>
     <canvas id="myChart" width="300" height="300"></canvas>
-    
+    <audio id="victoryaudio" src="../audio/victory.mp3" loop="loop"></audio>
 </body>
 <script type="module" src="./results.js"></script>
-<script type="module" src="./chart.js"></script>
+ 
 </html>
