--- a/results/results.html
+++ b/results/results.html
@@ -14,7 +14,11 @@
 
     <ul id="dataUl">
     </ul>
-    <canvas id="myChart" width="300" height="300"></canvas>
+    <div class="graphs">
+        <canvas id="myChart" width="200" height="200"></canvas>
+    <canvas id="myChart2" width="200" height="200"></canvas>
+    </div>
+
     <audio id="victoryaudio" src="../audio/victory.mp3" loop="loop"></audio>
 </body>
 <script type="module" src="./results.js"></script>
