--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
         <div id="rounds"></div>
     </main>
-    
+    <audio src="./audio/lab.mp3" autoplay="autoplay" loop="loop"></audio>
     <script type="module" src="./app.js"></script>
 </body>
 
