--- a/results/results.html
+++ b/results/results.html
@@ -19,7 +19,7 @@
     <canvas id="myChart2" width="200" height="200"></canvas>
     </div>
 
-    <audio id="victoryaudio" src="../audio/victory.mp3" loop="loop"></audio>
+    <audio src="../audio/victory.mp3" autoplay="autoplay" loop="loop"></audio>
 </body>
 <script type="module" src="./results.js"></script>
  
