clean up some more formatting issues

--- a/results/results.html
+++ b/results/results.html
@@ -12,7 +12,7 @@
     <h1>Here's your results!</h1>
     <a href='../index.html' id="play-again">Play again?!</a>
 
-    <ul id="dataUl">
+    <ul id="poke-ul">
     </ul>
     <div class="graphs">
         <canvas id="myChart" width="200" height="200"></canvas>
